@@ -1,3 +1,7 @@
+2002-10-29  Forgotten  <forgotten@users.sourceforge.net>
+
+	* src\thumb.cpp: fixed bugs in C core 
+
 2002-10-28  Forgotten  <forgotten@users.sourceforge.net>
 
 	* src/GBA.cpp (CPUSoftwareInterrupt): improved message about BIOS calls that are not emulated and need a BIOS file
